--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             <p>
                 You can send me direct message in
             </p>
-            <a class="social-media" target="blank" href="https://instagram.com/Younes._.hr"><i class="fab fa-instagram-square"></i></a>
-            <a class="social-media" target="blank" href="https://twitter.com/Younes_hr1"><i class="fab fa-twitter-square"></i></a>
+            <a class="social-media" target="blank" href=""><i class="fab fa-instagram-square"></i></a>
+            <a class="social-media" target="blank" href=""><i class="fab fa-twitter-square"></i></a>
             <a class="social-media" target="blank" href="https://discord.gg/6DV53DSVjB"><i class="fab fa-discord"></i></a>
         </div>
     </div>
